onlyoffice-docs/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice-docs
  namespace: onlyoffice-docs
  labels:
    app.kubernetes.io/name: onlyoffice-docs
spec:
  selector:
    app.kubernetes.io/name: onlyoffice-docs

  ports:
    - name: http
      port: 80
      targetPort: http

  type: ClusterIP
